# sportclub-orders-challenge_tmp

./: Makefile  docker-compose.yml
backend/: .gitignore  Dockerfile  app.db  main.py  pyproject.toml
backend/app/: main.py  seed.py
backend/app/api/: orders.py
backend/app/core/: config.py  database.py  exceptions.py
backend/app/models/: customer.py  enums.py  order.py  order_item.py
backend/app/repositories/: customer_repository.py  order_repository.py
backend/app/schemas/: customer.py  order.py  order_item.py
backend/app/services/: order_service.py
backend/tests/: conftest.py  test_api.py  test_services.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/api/: orders.js
frontend/src/components/: OrderFilters.jsx  Spinner.jsx  StatusBadge.jsx
frontend/src/pages/: OrderDetailPage.jsx  OrdersPage.jsx
frontend/src/tests/: StatusBadge.test.jsx
